implemented adapter tuning (untested) >> added adapter to the generation pipleline (untested)

--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,21 +114,164 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prompt Tuning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soft_prompts = torch.load(\"Saved_weights/Promt-Tuned_CLF__IMDB_50K/gpt2-medium/promptuned__epoch_10.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded checkpoint\n",
-      "loaded model weights\n"
+      "<REVIEW>: This was an awesome movie <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: This was an awesome movie <SENTIMENT> positive positive positive positive positive\n",
+      "p(answer):  p(' positive'[3967])=0.995, p(' negative'[4633])=0.0049, p(' positively'[19888])=0.0, p(' positives'[38548])=0.0, p(' good'[922])=0.0\n",
+      "\n",
+      "<REVIEW>: This was a bad movie <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: This was a bad movie <SENTIMENT> negative, negative, negative\n",
+      "p(answer):  p(' negative'[4633])=0.9986, p(' positive'[3967])=0.0014, p(' derogatory'[44094])=0.0, p(' bad'[2089])=0.0, p(' critical'[4688])=0.0\n",
+      "\n",
+      "<REVIEW>: This was not a good movie <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: This was not a good movie <SENTIMENT> negative positive positive positive\n",
+      "p(answer):  p(' negative'[4633])=0.996, p(' positive'[3967])=0.004, p(' critical'[4688])=0.0, p(' pro'[386])=0.0, p(' unfavorable'[38206])=0.0\n",
+      "\n",
+      "<REVIEW>: That movie was garbage <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: That movie was garbage <SENTIMENT> negative negative negative negative negative negative\n",
+      "p(answer):  p(' negative'[4633])=0.9967, p(' positive'[3967])=0.0033, p(' pro'[386])=0.0, p(' negativity'[45074])=0.0, p(' derogatory'[44094])=0.0\n",
+      "\n",
+      "<REVIEW>: Iphone 7 is not a good phone <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: Iphone 7 is not a good phone <SENTIMENT> negative positive\n",
+      "p(answer):  p(' negative'[4633])=0.9848, p(' positive'[3967])=0.0151, p(' Negative'[36183])=0.0, p(' pro'[386])=0.0, p(' negativity'[45074])=0.0\n",
+      "\n",
+      "<REVIEW>: Google new line of pixels are great <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: Google new line of pixels are great <SENTIMENT> positive positive positive\n",
+      "p(answer):  p(' positive'[3967])=0.8062, p(' negative'[4633])=0.1937, p(' Positive'[33733])=0.0, p(' negatives'[42510])=0.0, p(' positives'[38548])=0.0\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "checkpoint = torch.load('Saved_weights/Fine-Tuned_CLF__IMDB_50K/gpt2-medium/finetuned__epoch_2.pth')\n",
+    "txt, ret_dict = model_utils.generate_fast(\n",
+    "    model, tokenizer,\n",
+    "    prompt,\n",
+    "    argmax_greedy = True,\n",
+    "    max_out_len= 40,\n",
+    "    get_answer_tokens=True,\n",
+    "    light_weight_tuning= soft_prompts, algo = \"prompt\"\n",
+    "    # track_interesting_words = [\n",
+    "    #     [\" positive\", \" negative\"],\n",
+    "    #     [\" positive\", \" negative\"]\n",
+    "    # ]\n",
+    ")\n",
+    "\n",
+    "model_utils.print_formatted_results(prompt, txt, ret_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prefix-tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prefix_embeddings = torch.load('Saved_weights/Prefix-Tuned_CLF__IMDB_50K/gpt2-medium/prefixtuned__epoch_1.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<REVIEW>: This was an awesome movie <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: This was an awesome movie <SENTIMENT> positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
+      "p(answer):  p(' positive'[3967])=0.9853, p(' negative'[4633])=0.0146, p('positive'[24561])=0.0, p(' Positive'[33733])=0.0, p(' favorable'[17070])=0.0\n",
+      "\n",
+      "<REVIEW>: This was a bad movie <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: This was a bad movie <SENTIMENT> negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative\n",
+      "p(answer):  p(' negative'[4633])=0.9859, p(' positive'[3967])=0.014, p('negative'[31591])=0.0, p(' Negative'[36183])=0.0, p(' negatively'[22533])=0.0\n",
+      "\n",
+      "<REVIEW>: This was not a good movie <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: This was not a good movie <SENTIMENT> negative negative negative negative negative negative negative negative negative negative negative negative negative negative\n",
+      "p(answer):  p(' negative'[4633])=0.9011, p(' positive'[3967])=0.0986, p('negative'[31591])=0.0, p(' Negative'[36183])=0.0, p('positive'[24561])=0.0\n",
+      "\n",
+      "<REVIEW>: That movie was garbage <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: That movie was garbage <SENTIMENT> negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative\n",
+      "p(answer):  p(' negative'[4633])=0.9864, p(' positive'[3967])=0.0134, p(' Negative'[36183])=0.0, p('negative'[31591])=0.0, p(' negatively'[22533])=0.0\n",
+      "\n",
+      "<REVIEW>: Iphone 7 is not a good phone <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: Iphone 7 is not a good phone <SENTIMENT> negative negative negative negative negative negative negative negative negative negative negative negative\n",
+      "p(answer):  p(' negative'[4633])=0.8875, p(' positive'[3967])=0.112, p('negative'[31591])=0.0001, p(' Negative'[36183])=0.0, p('positive'[24561])=0.0\n",
+      "\n",
+      "<REVIEW>: Google new line of pixels are great <SENTIMENT>\n",
+      "<|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><|endoftext|><REVIEW>: Google new line of pixels are great <SENTIMENT> positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
+      "p(answer):  p(' positive'[3967])=0.9154, p(' negative'[4633])=0.0843, p('positive'[24561])=0.0001, p(' Positive'[33733])=0.0, p(' favorable'[17070])=0.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt, ret_dict = model_utils.generate_fast(\n",
+    "    model, tokenizer,\n",
+    "    prompt,\n",
+    "    argmax_greedy = True,\n",
+    "    max_out_len= 40,\n",
+    "    get_answer_tokens=True,\n",
+    "    light_weight_tuning= prefix_embeddings, algo = \"prefix\"\n",
+    "    # track_interesting_words = [\n",
+    "    #     [\" positive\", \" negative\"],\n",
+    "    #     [\" positive\", \" negative\"]\n",
+    "    # ]\n",
+    ")\n",
+    "\n",
+    "model_utils.print_formatted_results(prompt, txt, ret_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fine-tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint = torch.load('Saved_weights/Fine-Tuned_CLF__IMDB_50K/gpt2-medium/finetuned__epoch_5.pth')\n",
     "print(\"loaded checkpoint\")\n",
     "model.load_state_dict(checkpoint)\n",
     "print(\"loaded model weights\")"
@@ -138,38 +281,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<REVIEW>: This was an awesome movie <SENTIMENT>\n",
-      "<REVIEW>: This was an awesome movie <SENTIMENT> positive positive negative positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
-      "p(answer):  p(' positive'[3967])=0.9382, p(' negative'[4633])=0.0617, p(' Positive'[33733])=0.0, p(' positives'[38548])=0.0, p('positive'[24561])=0.0\n",
-      "\n",
-      "<REVIEW>: This was a bad movie <SENTIMENT>\n",
-      "<REVIEW>: This was a bad movie <SENTIMENT> negative positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
-      "p(answer):  p(' negative'[4633])=0.8916, p(' positive'[3967])=0.1082, p(' Negative'[36183])=0.0, p(' negatives'[42510])=0.0, p(' Positive'[33733])=0.0\n",
-      "\n",
-      "<REVIEW>: This was not a good movie <SENTIMENT>\n",
-      "<REVIEW>: This was not a good movie <SENTIMENT> positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
-      "p(answer):  p(' positive'[3967])=0.738, p(' negative'[4633])=0.2619, p(' Positive'[33733])=0.0, p(' positives'[38548])=0.0, p('positive'[24561])=0.0\n",
-      "\n",
-      "<REVIEW>: That movie was garbage <SENTIMENT>\n",
-      "<REVIEW>: That movie was garbage <SENTIMENT> negative positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
-      "p(answer):  p(' negative'[4633])=0.9724, p(' positive'[3967])=0.0275, p(' Negative'[36183])=0.0, p(' negatives'[42510])=0.0, p('negative'[31591])=0.0\n",
-      "\n",
-      "<REVIEW>: Iphone 7 is not a good phone <SENTIMENT>\n",
-      "<REVIEW>: Iphone 7 is not a good phone <SENTIMENT> positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
-      "p(answer):  p(' positive'[3967])=0.5648, p(' negative'[4633])=0.435, p(' Positive'[33733])=0.0, p(' positives'[38548])=0.0, p(' Negative'[36183])=0.0\n",
-      "\n",
-      "<REVIEW>: Google new line of pixels are great <SENTIMENT>\n",
-      "<REVIEW>: Google new line of pixels are great <SENTIMENT> positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
-      "p(answer):  p(' positive'[3967])=0.6838, p(' negative'[4633])=0.316, p(' Positive'[33733])=0.0, p(' positives'[38548])=0.0, p('positive'[24561])=0.0\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompt = [\n",
     "    \"This was an awesome movie\",\n",
@@ -198,13 +310,6 @@
     "\n",
     "model_utils.print_formatted_results(prompt, txt, ret_dict)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
