--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -173,10 +173,6 @@
     "    max_out_len= 40,\n",
     "    get_answer_tokens=True,\n",
     "    light_weight_tuning= soft_prompts, algo = \"prompt\"\n",
-    "    # track_interesting_words = [\n",
-    "    #     [\" positive\", \" negative\"],\n",
-    "    #     [\" positive\", \" negative\"]\n",
-    "    # ]\n",
     ")\n",
     "\n",
     "model_utils.print_formatted_results(prompt, txt, ret_dict)"
@@ -191,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -242,21 +238,117 @@
     "    max_out_len= 40,\n",
     "    get_answer_tokens=True,\n",
     "    light_weight_tuning= prefix_embeddings, algo = \"prefix\"\n",
-    "    # track_interesting_words = [\n",
-    "    #     [\" positive\", \" negative\"],\n",
-    "    #     [\" positive\", \" negative\"]\n",
-    "    # ]\n",
     ")\n",
     "\n",
     "model_utils.print_formatted_results(prompt, txt, ret_dict)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adapter Tuning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch.nn import Linear, ReLU, Sequential, Tanh\n",
+    "\n",
+    "def init_weights(m, lo = -0.0001, hi = 0.0001):\n",
+    "    if isinstance(m, Linear):\n",
+    "        torch.nn.init.uniform_(m.weight, a = lo, b = hi)\n",
+    "        torch.nn.init.uniform_(m.bias, a = lo, b = hi)\n",
+    "\n",
+    "\n",
+    "class Adapter(torch.nn.Module):\n",
+    "    def __init__(self, inp_out_dim, adapter_dim, hidden_conf = []):\n",
+    "        super().__init__()\n",
+    "        self.inp_out_dim = inp_out_dim\n",
+    "        self.conf = [inp_out_dim] + hidden_conf + [adapter_dim] + hidden_conf[::-1] + [inp_out_dim]\n",
+    "        # print(self.conf)\n",
+    "        self.adapter_dim = adapter_dim\n",
+    "        self.layers = []\n",
+    "\n",
+    "        i = 1\n",
+    "        while i < len(self.conf):\n",
+    "            inp = self.conf[i-1]\n",
+    "            out = self.conf[i]\n",
+    "            layer_name = f'layer{i}'\n",
+    "            setattr(self, layer_name, Sequential(Linear(inp, out), ReLU()))\n",
+    "            self.layers.append(layer_name)\n",
+    "            i += 1\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x_init = x.clone()\n",
+    "        for module in self.named_children():\n",
+    "            layer_name = module[0]\n",
+    "            layer = getattr(self, layer_name)\n",
+    "            x = layer(x)\n",
+    "        return x + x_init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adapter_blocks = torch.load(\"Saved_weights/Adapter-Tuned_CLF__IMDB_50K/gpt2-medium/adapter_tuned__epoch_3.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<REVIEW>: This was an awesome movie <SENTIMENT>\n",
+      "<REVIEW>: This was an awesome movie <SENTIMENT> positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive positive\n",
+      "p(answer):  p(' positive'[3967])=0.5254, p(' awesome'[7427])=0.046, p(' of'[286])=0.0219, p(' great'[1049])=0.0136, p(' negative'[4633])=0.0099\n",
+      "\n",
+      "<REVIEW>: This was a bad movie <SENTIMENT>\n",
+      "<REVIEW>: This was a bad movie <SENTIMENT> negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative negative\n",
+      "p(answer):  p(' negative'[4633])=0.6349, p(' positive'[3967])=0.0435, p(' bad'[2089])=0.0374, p(' of'[286])=0.0193, p(' not'[407])=0.0059\n",
+      "\n",
+      "<REVIEW>: This was not a good movie <SENTIMENT>\n",
+      "<REVIEW>: This was not a good movie <SENTIMENT> negative negative. I don't know if it was the negative reviews or the negative reviews that made me leave. I was\n",
+      "p(answer):  p(' negative'[4633])=0.8781, p(' positive'[3967])=0.0261, p(' bad'[2089])=0.0074, p(' of'[286])=0.0073, p(' worse'[4785])=0.0028\n",
+      "\n",
+      "<REVIEW>: That movie was garbage <SENTIMENT>\n",
+      "<REVIEW>: That movie was garbage <SENTIMENT> negative. I don't know if it was the negative reviews or the negative reviews that made me want to go back to the original\n",
+      "p(answer):  p(' negative'[4633])=0.9333, p(' positive'[3967])=0.0663, p(' bad'[2089])=0.0001, p(' Negative'[36183])=0.0, p(' good'[922])=0.0\n",
+      "\n",
+      "<REVIEW>: Iphone 7 is not a good phone <SENTIMENT>\n",
+      "<REVIEW>: Iphone 7 is not a good phone <SENTIMENT> I am not sure if this is a good or bad thing. I am not sure if this is a good\n",
+      "p(answer):  p(' I'[314])=0.0439, p('\n",
+      "'[198])=0.0242, p(' but'[475])=0.0222, p(' and'[290])=0.0158, p(' to'[284])=0.0138\n",
+      "\n",
+      "<REVIEW>: Google new line of pixels are great <SENTIMENT>\n",
+      "<REVIEW>: Google new line of pixels are great <SENTIMENT> positive, but the negative is not. The negative is not positive, it is negative. The negative is negative,\n",
+      "p(answer):  p(' positive'[3967])=0.0686, p(' but'[475])=0.0512, p(' negative'[4633])=0.0338, p(' better'[1365])=0.0226, p(' more'[517])=0.0197\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt, ret_dict = model_utils.generate_fast(\n",
+    "    model, tokenizer,\n",
+    "    prompt,\n",
+    "    argmax_greedy = True,\n",
+    "    max_out_len= 40,\n",
+    "    get_answer_tokens=True,\n",
+    "    light_weight_tuning= adapter_blocks, algo = \"adapter\"\n",
+    ")\n",
+    "\n",
+    "model_utils.print_formatted_results(prompt, txt, ret_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
