set up experiment 1

--- a/A5_Adapter_tuning/Adapter_tuning_CLF.ipynb
+++ b/A5_Adapter_tuning/Adapter_tuning_CLF.ipynb
@@ -1095,7 +1095,7 @@
     "testing_dataloader = DataLoader(test_dataset, batch_size=1)\n",
     "\n",
     "target = []\n",
-    "predict = []Saved_weights/Adapter-Tuned_CLF__IMDB_50K/gpt2-medium/adapter_tuned__epoch_3.pth\n",
+    "predict = []\n",
     "\n",
     "for reviews, sentiment in tqdm(testing_dataloader):\n",
     "    tokenized_inputs = tokenizer(\n",
@@ -1178,292 +1178,6 @@
     "\n",
     "balanced_acc"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{' positive': 130937, ' negative': 132777}"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "target_track"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'transformer.h.0.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.1.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.2.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.3.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.4.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.5.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.6.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.7.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.8.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.9.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.10.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.11.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.12.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.13.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.14.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.15.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.16.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.17.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.18.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.19.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.20.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.21.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.22.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " ),\n",
-       " 'transformer.h.23.mlp': Adapter(\n",
-       "   (layer1): Sequential(\n",
-       "     (0): Linear(in_features=1024, out_features=128, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       "   (layer2): Sequential(\n",
-       "     (0): Linear(in_features=128, out_features=1024, bias=True)\n",
-       "     (1): ReLU()\n",
-       "   )\n",
-       " )}"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.save(adapter_blocks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
