--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -335,6 +335,14 @@
       "p(answer):  p(' positive'[3967])=0.0686, p(' but'[475])=0.0512, p(' negative'[4633])=0.0338, p(' better'[1365])=0.0226, p(' more'[517])=0.0197\n",
       "\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
