--- a/Exp_3__Extrapolation.ipynb
+++ b/Exp_3__Extrapolation.ipynb
@@ -394,8 +394,8 @@
    ],
    "source": [
     "mt_2 = model_utils.ModelAndTokenizer(MODEL_NAME, low_cpu_mem_usage=False)\n",
-    "model_2 = mt.model\n",
-    "tokenizer_2 = mt.tokenizer\n",
+    "model_2 = mt_2.model\n",
+    "tokenizer_2 = mt_2.tokenizer\n",
     "tokenizer_2.pad_token = tokenizer_2.eos_token\n",
     "print(f\"Duplicate Model {MODEL_NAME} initialized\")"
    ]
